RESOLVED FIXED296223
[visionOS] In fullscreen, unable to change subtitles after changing playback speed
https://bugs.webkit.org/show_bug.cgi?id=296223
Summary [visionOS] In fullscreen, unable to change subtitles after changing playback ...
Andy Estes
Reported 2025-07-18 20:20:27 PDT
SSIA
Attachments
Andy Estes
Comment 1 2025-07-18 20:20:27 PDT
Andy Estes
Comment 2 2025-07-18 20:24:40 PDT
EWS
Comment 3 2025-07-21 10:23:14 PDT
Committed 297688@main (b4e60928f6eb): <https://commits.webkit.org/297688@main> Reviewed commits have been landed. Closing PR #48283 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.